objects/LLC_BI__Cash_Service__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Controlled_Disbursement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Controlled Disbursement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Full_Positive_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Positive Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Partial_Positive_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Positive Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reverse_Positive_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse Positive Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Cash Service</relationshipLabel>
        <relationshipName>Cash_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cash Service</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000000}</displayFormat>
        <label>Cash Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>